--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       greeting: hello
   steps:
-   - name: Hello priyanka
+   - name: "Hello priyanka"
      run: echo "$greeting $first_name,welocome to $cloud"
      env: 
       first_name: priya
