--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -1,1 +1,18 @@
+name: Testing workflow variable
 
+on:
+  workflow_dispatch
+
+env: 
+ cloud: google-cloud
+
+jobs:
+  greetingjob:
+    runs-on: ubuntu-latest
+    env:
+      greeting: hello
+    steps:
+      - name: "Hello priyanka"
+        run: echo "$greeting $first_name,welocome to $cloud"
+         env: 
+           first_name: priya
