--- a/.github/workflows/configuration_variable.yml
+++ b/.github/workflows/configuration_variable.yml
@@ -15,7 +15,7 @@ jobs:
   
     steps:
     - name: greeting priyanka
-      run: echo "$greeting $first-name, Welcome to $cloud and you are using $cloud
+      run: echo "$greeting ${{ first-name }}, Welcome to $cloud and you are using $cloud
         with project id  ${{ vars.Project_id }}!"
       env:
         first-name: priya
